more alignment fixes and tweaks

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -18,6 +18,9 @@ footer {
 
 #nav-page-carousel {
     width: calc(300vw - 210px) !important;
+
+    height: calc(100vh - 68px - 15px - 40px) !important;
+    flex-shrink: 0;
 }
 
 #page-container {
@@ -57,21 +60,32 @@ footer {
     /*limit size*/
     width: calc(768px - 70px - 30px);
     left: calc(50% + 35px);
-    transform: translateX(-50%)
+    transform: translateX(-50%);
+    margin-right: 15px;
 }
 
 .timer-container {
     max-width: calc(520px + 20vw) !important;
-    margin: 0 auto;
+    padding-bottom: 60px;
+    min-height: fit-content;
 }
 
 #nav-page-carousel .nav-page {
-    width: calc(100vw - 70px - 15px);
+    width: calc(100vw - 70px);
+    display: flex;
+    justify-content: center;
+    flex-shrink: 0;
+    min-height: calc(100vh - 68px - 15px - 40px) !important;
+    left: 0;
+    margin-right: 70px;
+    padding-right: 30px;
 }
 
 #page-container>.page {
     width: calc(100vw - 70px) !important;
     height: calc(100vh - 68px) !important;
+    min-height: calc(100vh - 68px) !important;
+    flex-shrink: 0 !important;
 }
 
 #page-notes {}
